Details
Description
o Setup.exe fails producing a zero width and zero height modal pop-up that you cannot interact with.
Log:
(win32ss\user\ntuser\winpos.c:787) err: FIXME: Parent is Desktop, Min off screen!
|
err:(dll\win32\comctl32\propsheet.c:1125) padding negative ! Please report this !
|
(win32ss\user\ntuser\winpos.c:3426) err: NtUserSetWindowPos bad window handle!
|
(win32ss\user\ntuser\winpos.c:3426) err: NtUserSetWindowPos bad window handle!
|
(win32ss\user\ntuser\winpos.c:3426) err: NtUserSetWindowPos bad window handle!
|
(win32ss\user\ntuser\winpos.c:3426) err: NtUserSetWindowPos bad window handle!
|
(win32ss\user\ntuser\winpos.c:3426) err: NtUserSetWindowPos bad window handle!
|
(win32ss\user\ntuser\winpos.c:3426) err: NtUserSetWindowPos bad window handle!
|
(win32ss\user\ntuser\winpos.c:3426) err: NtUserSetWindowPos bad window handle!
|
(win32ss\user\ntuser\winpos.c:3426) err: NtUserSetWindowPos bad window handle!
|
(win32ss\user\ntuser\winpos.c:3426) err: NtUserSetWindowPos bad window handle!
|
(win32ss\user\ntuser\winpos.c:3426) err: NtUserSetWindowPos bad window handle!
|
(win32ss\gdi\gdi32\objects\text.c:543) GdiBCExtTextOut nothing
|
fixme:(dll\win32\comctl32\toolbar.c:5623) [00020152] response -858993460 not handled to NM_CUSTOMDRAW (CDDS_PREERASE)
|
fixme:(dll\win32\comctl32\toolbar.c:5660) [00020152] response -858993460 not handled to NM_CUSTOMDRAW (CDDS_POSTERASE)
|
Attachments
Issue Links
- is duplicated by
-
CORE-12551 "padding negative ! Please report this !"
-
- Resolved
-
- relates to
-
CORE-16651 Acost.exe from VB6 setup displays an empty dialog
-
- Resolved
-