[0.4.9][COMCTL32] Listview: marqueeRect before starting highlight (#5555), RC: VB6-InstallWizard (#2270)

port back:
0.4.15-dev-6456-g 918a8180718f0901e231b12fe2274b82baa926b6 [WINESYNC][COMCTL32] Listview: Initialize marqueeRect from left-click coordinates before starting a marquee highlight (#5555)

The infoPtr->marqueeRect structure is not currently initialized before the
marquee highlight sequence starts, resulting in the RECT having initial
coordinates of (0,0)-(0,0). These coordinates cause the first item in
the listview control to be identified as being within the range of the
marqueeRect's coordinates. This can be best observed when our filebrowser is in details-mode.

That item is then set to LVIS_SELECTED even though it is not part of the
marquee selection.

Wine commit: daf95aaadf3a59f0ccc129a853327417b5e4f07c

author: Hugh McMaster <hugh.mcmaster@outlook.com>
Mon, 26 Apr 2021 10:59:51 +0000 (20:59 +1000)

---------------

Also fix CORE-16650 'VB6 installation does not show the wizard correctly'
by porting back:
0.4.14-dev-844-g ea35843c300f381845b69c634e51ba849a0ea5a7 [COMCTL] Use DIALOG instead of DIALOGEX resources (#2270)

This is needed, because property sheets can modify the dialog resource,
and example code (and some existing applications) expect DIALOG.
One such application is the VB6 setup.
CORE-16650

---------------

also port back a few other trivial improvements from never branches, e.g.:
a tiny fraction of 0.4.14-dev-150-g 00f14ee1f22a1c285462459f859fa17c90ccc19f the type/cast-changes in LISTVIEW_MouseWheel()

---------------

0.4.13-dev-26-g 6122f3f436a4551e2a85318b7e6452a6fbada2c5 [COMCTL32] Remove an unnecessary include

---------------

and port back also a few trivial RC improvements, mainly to keep binary size under control.

Binary size:
comctl32.dll master    RosBEWin2.2.2 GCC8.4.0dbg               1.999.872
comctl32.dll 0.4.14rls RosBEWin2.1.6 GCC4.7.2dbg  1.808.896 -> 1.808.896
comctl32.dll 0.4.13rls RosBEWin2.1.6 GCC4.7.2dbg  1.810.944 -> 1.805.312
comctl32.dll 0.4.12rls RosBEWin2.1.6 GCC4.7.2dbg  1.823.232 -> 1.818.112
comctl32.dll 0.4.11rls RosBEWin2.1.6 GCC4.7.2dbg  1.816.064 -> 1.810.944
comctl32.dll 0.4.10rls RosBEWin2.1.6 GCC4.7.2dbg  1.813.504 -> 1.808.384
comctl32.dll 0.4. 9rls RosBEWin2.1.6 GCC4.7.2dbg  1.813.504 -> 1.808.384
comctl32.dll 0.4. 8rls RosBEWin2.1.6 GCC4.7.2dbg  1.639.424 -> 1.634.304
comctl32.dll 0.4. 7rls RosBEWin2.1.6 GCC4.7.2dbg  1.634.304 -> 1.629.184